Fix align on menu__body for min1024px to flex-start

--- a/css/style.css
+++ b/css/style.css
@@ -313,7 +313,7 @@ main {
 }
 .section-search__location {
   height: 50px;
-  background-color: #e9e9e9;
+  background-color: #e8e8e8;
   font-weight: 600;
   display: flex;
   justify-content: center;
@@ -597,6 +597,10 @@ main {
   }
 }
 
+.menu__body {
+  display: flex;
+  flex-direction: column;
+}
 @media only screen and (min-width: 768px) {
   .menu__body {
     display: flex;
@@ -609,6 +613,7 @@ main {
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
   }
 }
 
