--- a/pages/_menu.scss
+++ b/pages/_menu.scss
@@ -39,7 +39,8 @@
 }
 
 .menu__body {
-
+ display: flex;
+  flex-direction: column;
   @media only screen and (min-width: 768px) {
     display: flex;
     flex-direction: column;
@@ -49,6 +50,8 @@
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
+
   }
 }
 
